# pastors-102

./: .gitignore  README.md
binance_funder/: .env.example  README.md  withdraw.py
bot/: .env.example  .gitignore  Cargo.toml  README.md  config.example.toml  setup.sh
bot/src/: config.rs  jito.rs  main.rs  pumpfun.rs  rpc.rs  strategy.rs  trigger.rs  ui.rs  wallets.rs
bot/static/: index.html
funder/: .env.example  .gitignore  README.md  fund_wallets.py  requirements.txt  setup.sh
multihop/: .env.example  .gitignore  README.md  jupiter.py  multihop.py  requirements.txt  setup.sh
scripts/: README.md  deploy-to-server.ps1  deploy-to-server.sh  deploy_paramiko.py  generate-ssh-key-for-hetzner.ps1  requirements-deploy.txt
sweeper/: .env.example  README.md  deposit_addresses.example.csv  requirements.txt  sweep_to_cex.py
wallets/: .env.example  .gitignore  README.md  generate_wallets.py  proxies.txt.example  requirements.txt  setup.sh
