[package]
name = "pastors-bot"
version = "0.1.0"
edition = "2021"
authors = ["pastors-102-v2"]
description = "High-speed Pump.fun sniper bot using Jito bundles, Helius+Triton RPC rotation, and a small web UI"
license = "Proprietary"
publish = false

[[bin]]
name = "pastors-bot"
path = "src/main.rs"

[dependencies]
# Solana core
solana-sdk = "2"
solana-client = "2"
solana-program = "2"
solana-transaction-status = "2"

# SPL
spl-token = { version = "8", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "5", features = ["no-entrypoint"] }

# Async + HTTP
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
futures = "0.3"

# Web UI
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
borsh = "1"
bs58 = "0.5"
base64 = "0.22"
toml = "0.8"

# Crypto / random
rand = "0.8"

# Time + scheduling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# Logging + errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"

# Config
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
