[package]
name = "pastors-bot"
version = "0.1.0"
edition = "2021"
authors = ["pastors-102-v2"]
description = "High-speed Pump.fun sniper bot using Jito bundles, Helius+Triton RPC rotation, and a small web UI"
license = "Proprietary"
publish = false

[[bin]]
name = "pastors-bot"
path = "src/main.rs"

[dependencies]
# Solana core (pinned to 2.2.x ecosystem to align with the SPL crates below)
solana-sdk = "2.2"
solana-client = "2.2"
solana-program = "2.2"
solana-transaction-status = "2.2"

# SPL
# spl-associated-token-account 7.x is the version aligned with solana-program 2.2.x
# (newer 8.x switched to split-crate model; 5.x/6.x pin solana-program 2.0.x or 2.1.x).
spl-associated-token-account = { version = "7", features = ["no-entrypoint"] }

# Async + HTTP
tokio = { version = "1", features = ["full"] }
# NOTE: native-tls (OpenSSL on Linux) is used over rustls-tls because rustls
# 0.22 forces zeroize >=1.6, which conflicts with curve25519-dalek 3.2.1
# (pinned by spl-token-2022 5.x's confidential-transfer-proof-generation),
# itself pinned to zeroize <1.4. setup.sh installs libssl-dev for this.
reqwest = { version = "0.12", features = ["json", "native-tls"], default-features = false }
futures = "0.3"

# Web UI
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
borsh = "1"
bs58 = "0.5.1"
base64 = "0.22"
toml = "0.8"

# Crypto / random
rand = "0.8"

# Time + scheduling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# Logging + errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"

# Config
dotenvy = "0.15"
clap = { version = "4", features = ["derive", "env"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 1
